examples/class/class-14.nbl
class Chef
{
    cook()
    {
        super.cook(); // error
    }
}
